[tool.poetry]
name="Grumpy"
version="0.1"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
pydantic = {extras = ["dotenv"], version = "^2.11.7"}
psycopg2-binary = "^2.9.10"
uvicorn = "^0.35.0"
alembic = "^1.16.5"
dotenv = "^0.9.9"

[tool.black]
line-length = 88
target-version = ["py313"]
